# zendesk_coding_test

./: .flake8  Dockerfile  Dockerfile.prod  Makefile  README.md  demo  demo.sh  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  ticket.json
static/css/: styles.css
templates/: ticket.html  ticket_list.html
tests/: test_ticket.py  test_ticket_viewer.py
theme/static_src/: package-lock.json
ticket/: models.py  tests.py  urls.py  utils.py  views.py
ticket/migrations/: 0001_initial.py
ticket_viewer/: .env-template  asgi.py  settings.py  urls.py  wsgi.py
